--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 
-I sent ohlc.pm to Benjamin Warfield (cpan/~bwarfield) about a
-year ago.  He later told me that he gets millions of patches,
-some that work, some that don't and that he doesn't really have
-time to apply them all.  This is understandable.  He also told me
-that making sure GD::Graph is stable on all 16,000 platforms is
-his number one goal.  Admirable.
+I sent ohlc.pm to Benjamin Warfield (cpan/~bwarfield) as a patch
+about a year ago.  He later told me that he gets millions of
+patches, some that work, some that don't and that he doesn't
+really have time to apply them all.  This is understandable.  He
+also told me that making sure GD::Graph is stable on all 16,000
+platforms is his number one goal.  Admirable.
 
 He then pointed out that I didn't really need to wait on him... I
 could just release a sub-module.  I don't know why that didn't
