--- a/Changes
+++ b/Changes
@@ -1,2 +1,5 @@
+0.9401: Wed Apr 15 06:53:15 EDT 2009
+   - got this more or less ready to try to use
+
 0.01: Wed Apr 15 05:46:18 EDT 2009
    - skelling this up
