--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9401: Wed Apr 15 07:29:37 EDT 2009
+   - this seems more or less ready to distribute
+
 0.9401: Wed Apr 15 06:53:15 EDT 2009
    - got this more or less ready to try to use
 
