--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9401: Wed Apr 15 22:05:18 EDT 2009
+   - misnamed in the name line of the pod.  Wow.
+
 0.9401: Wed Apr 15 07:29:37 EDT 2009
    - this seems more or less ready to distribute
 
