--- a/ohlc.pod
+++ b/ohlc.pod
@@ -1,17 +1,17 @@
 =head1 NAME
 
-GD::Graph::ohlc - A new graph type for GD::Graph
+GD::Graph::ohlc - GD::Graph type that shows open, high, low and close as ticks on little sticks
 
 =head1 SYNOPSIS
 
 Create an chart, displaying the open, high, low, and close -- normally for
-stock data.  The data points for ohlc charts are completely differnet from all
-the other graph types, they must be four touples, C<[$o,$h,$l,$c]>, instead of
-single scalar values.  See the L<EXAMPLE> section for example usage.
+stock data.  The data points for ohlc charts are completely different from all
+the other graph types, they must be four tuples, C<[$o,$h,$l,$c]>, instead of
+single scalar values.  See the L</EXAMPLE> section for example usage.
 
 =head1 ohlc data
 
-The data points for ohlc and ohlc-mixed graphs must be four touples -- instead
+The data points for ohlc and ohlc-mixed graphs must be four tuples -- instead
 of the single scalar number the other L<GD::Graph>s take.  This would feed
 nicely into an ohlc-mixed graph:
 
