--- a/ohlc.pod
+++ b/ohlc.pod
@@ -7,9 +7,9 @@ GD::Graph::ohlc - GD::Graph type that shows open, high, low and close as ticks o
 Create an chart, displaying the open, high, low, and close -- normally for
 stock data.  The data points for ohlc charts are completely different from all
 the other graph types, they must be four tuples, C<[$o,$h,$l,$c]>, instead of
-single scalar values.  See the L</EXAMPLE> section for example usage.
+single scalar values.  See the L</DATA> section for an explanation.
 
-=head1 ohlc data
+=head1 DATA
 
 The data points for ohlc and ohlc-mixed graphs must be four tuples -- instead
 of the single scalar number the other L<GD::Graph>s take.  This would feed
