--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -30,7 +30,6 @@ This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_
     use warnings;
     use List::Util qw(min max);
     use GD::Graph::candlesticks;
-    use GD::Graph::mixed;
 
     my @msft = (     #  open       high       low        close
         ["2007/12/18", "34.6400", "35.0000", "34.2100", "34.7400"],
@@ -69,15 +68,14 @@ This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_
     my $min_point  = min(@all_points);
     my $max_point  = max(@all_points);
 
-    my $graph = GD::Graph::mixed->new(800, 400);
+    my $graph = GD::Graph::candlesticks->new(800, 400);
        $graph->set( 
             x_labels_vertical => 1,
             x_label           => 'Trade Date',
             y_label           => 'NASDAQ:MSFT',
             title             => "Example OHLC",
             transparent       => 0,
-            dclrs             => [qw(lgray blue)],
-            types             => [qw(lines candlesticks)],
+            dclrs             => [qw(blue)],
             y_min_value       => $min_point-0.2,
             y_max_value       => $max_point+0.2,
             y_number_format   => '%0.2f',
@@ -86,7 +84,6 @@ This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_
 
     my $data_candlesticks = [
         [ map {$_->[0]} @msft ],       # date
-        [ map {$_->[4]} @msft ],       # close
         [ map {[@$_[1 .. 4]]} @msft ], # candlesticks
     ];
 
