--- a/ohlc.pod
+++ b/ohlc.pod
@@ -111,4 +111,5 @@ Copyright (c) 2009 Paul Miller
 
 =head1 SEE ALSO
 
-perl(1), L<GD::Graph>, L<GD::Graph::candlesticks>
+perl(1), L<GD::Graph>, L<GD::Graph::candlesticks>,
+L<OHLC@wikipedia|http://en.wikipedia.org/wiki/OHLC>
