seems to work fine

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 0.9600: Sun Apr 26 17:56:40 EDT 2009
    - started adding candlesticks
    - added the pod and the pod-example test script
-   - got candlesticks working -- have not yet tested mixed graphs with them
+   - got candlesticks working -- seems to work fine in mixed mode too
 
 0.9402: Wed Apr 15 22:05:18 EDT 2009
    - misnamed in the name line of the pod.  Wow.
