--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -118,4 +118,4 @@ Copyright (c) 2009 Paul Miller
 
 perl(1), L<GD::Graph>, L<GD::Graph::ohlc>,
 L<candlesticks@wikipedia|http://en.wikipedia.org/wiki/Candlestick_chart>,
-L<error bars|http://en.wikipedia.org/wiki/Error_bars>
+L<error bars@wikipedia|http://en.wikipedia.org/wiki/Error_bars>
