--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9600: Fri Aug 21 2009
+   - Ken Tuchman <tuchman at t-online tld=de> pointed out some
+     flaws in the PODs.
+
 0.9600: Wed Jul 08 2009
    - Doc bugs (very indirectly) found by Hans Dieter Pearcey
    - added critic.t and fixed many things
