--- a/ohlc.pod
+++ b/ohlc.pod
@@ -25,6 +25,9 @@ nicely into an ohlc-mixed graph:
 
 This example turns out like this: L<https://voltar.org/PerlModules/ohlc_example.png>.
 
+NOTE: You do not need to use L<GD::Graph::mixed> here -- see
+L<GD::Graph::candlesticks> for an example that doesn't use mixed.
+
     use strict;
     use warnings;
     use List::Util qw(min max);
