--- a/Changes
+++ b/Changes
@@ -1,8 +1,12 @@
-0.9600: Fri Aug 21 2009
+0.9602: Thu Aug 27 2009
+   - Made a few pod changes (in addition to Ken's) and moved a
+     few files around in the dist.
+
+0.9602: Fri Aug 21 2009
    - Ken Tuchman <tuchman at t-online tld=de> pointed out some
      flaws in the PODs.
 
-0.9600: Wed Jul 08 2009
+0.9601: Wed Jul 08 2009
    - Doc bugs (very indirectly) found by Hans Dieter Pearcey
    - added critic.t and fixed many things
 
