--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -32,8 +32,8 @@ bar-graphs would, so this seemed to require a new option.
 
 This example turns out like this: L<https://voltar.org/PerlModules/candlesticks_example.png>.
 
-NOTE: You do can to use L<GD::Graph::mixed> here -- see
-L<GD::Graph::ohlc> for an example that doesn't use mixed.
+NOTE: You do can to use L<GD::Graph::mixed> here.  See L<GD::Graph::ohlc> for an
+example that uses mixed.
 
     use strict;
     use warnings;
