--- a/candlesticks.pod
+++ b/candlesticks.pod
@@ -98,7 +98,7 @@ example that uses mixed.
     ];
 
     my $gd = $graph->plot($data_candlesticks) or die $graph->error;
-    open my $dump, ">candlesticks_example.png" or die $!;
+    open my $dump, ">", "/tmp/candlesticks_example.png" or die $!;
     print $dump $gd->png;
     close $dump;
 
