--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9703: Tue Jul 23 2013
+   - various minor changes and bugfixes
+
 0.9607: Sun Jan 06 2013
    - major bugs relating to the alternate color stuff that I
      don't think anyone (including myself) ever used.  Stripped
